# GlobeNewsLive

./: .env.local  .gitignore  DESIGN_PROPOSAL.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  ISSUE_economic-dashboard.md  ISSUE_signal-feed-auto-scroll.md  README.md  next.config.mjs  package-lock.json  package.json  tsconfig.tsbuildinfo
proto/: geo.proto  markets.proto  signals.proto
public/: manifest.json  sw.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/financial/: page.tsx
src/app/test-globe/: page.tsx
src/components/: AudioSummary.tsx  BookmarkManager.tsx  CustomDashboard.tsx  EconomicPanel.tsx  EnhancedMapControls.tsx  FlightRadar.tsx  FullscreenToggle.tsx  Globe3D.tsx  Globe3DView.tsx  HealthAlertPanel.tsx  HealthThreatPanel.tsx  HelpPin.tsx  HotspotStreams.tsx  MapFocusView.tsx  MobileNav.tsx  MobileNavEnhanced.tsx  OutbreakMap.tsx  RSSTicker.tsx  SignalFeed.tsx  StatsBar.tsx  StrategicPosturePanel.tsx  TVMode.tsx  ThreatMap.tsx  WarRoom.tsx  WarRoomMap.tsx  WorldMap.tsx  WorldMonitorLayout.tsx
src/components/economic/: CentralBankPanel.tsx  CommodityPanel.tsx  ComparativePanel.tsx  EconomicCalendarPanel.tsx  EconomicChoroplethMap.tsx  EconomicDashboardFull.tsx  EconomicGlobe3D.tsx  ForexPanel.tsx  (+5 more)
src/config/: feeds.ts  map-layers.ts  variant.ts
src/data/: economicCountries.ts  economicExtended.ts
src/lib/: classify.ts  feeds.ts  redis.ts
src/locales/: index.ts
src/services/: ai-synthesis.ts  cii.ts  headline-memory.ts
src/types/: finance.ts  index.ts
(+32 files in other folders)
